--- a/study_code/a_project/scss/src/event/_event_phone.scss
+++ b/study_code/a_project/scss/src/event/_event_phone.scss
@@ -11,31 +11,28 @@
         text-align: center; 
       }
     } // .event_total_title
-
-    @at-root .event_area {
-      position: relative;
-      min-height: 1300px;
-      padding: 30px 0;
-
-      .event_tab {
-  
-        li {
-          margin: 3px auto 20px 0;
-
-        } // li
-      } // .event_tab
-
-      @at-root .tab_content {
-        .event_ing_wrap {
-          flex-direction: column; justify-content: flex-start; 
-          
-          @at-root .event {
-            margin: auto;
-            
-          } // .event
-        } // .event_ing_wrap
-      } // .tab_content
-
-    } // .event_area
   } // #eventBox
+
+  .event_area {
+    position: relative;
+    min-height: 1300px;
+    padding: 30px 0;
+
+    .event_tab {
+
+      li {
+        margin: 3px auto 20px 0;
+
+      } // li
+    } // .event_tab
+  } // .event_area
+  
+  .event_ing_wrap {
+    flex-direction: column; justify-content: flex-start; 
+  } // .event_ing_wrap
+  
+  .event {
+    margin: auto;
+    
+  } // .event
 } // ~767px ==========================================================
