--- a/study_code/b_step_03/scss/src/e_09_scrollMove.scss
+++ b/study_code/b_step_03/scss/src/e_09_scrollMove.scss
@@ -1,7 +1,7 @@
 // e_09_scrollMove.scss
 
 #wrap {
-  width: 100%; height: 2000px;
+  width: 100%; height: 3400px;
   background-image: linear-gradient(45deg, #ada, #da7);
 }
 
@@ -13,4 +13,33 @@
   position: fixed; bottom: auto; top: 0;
   height: 90px; background-color: #ffc2c2;
   transition: all 300ms ease;
+}
+
+.scroll_down_btn {
+  position: fixed; z-index: 1200;
+  bottom: 0.5rem; left: 0; right: 0;
+  width: 5rem; height: 3rem; margin: auto;
+  
+  >button {
+    width: 100%; height: 100%; 
+    border-radius: 0.5rem;
+    text-transform: uppercase; font-size: 0.7rem;
+    animation: move 1000ms alternate infinite;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.2);
+
+    i:before {
+      content: ""; display: inline-block;
+      width: 1rem; height: 1rem;
+      border: 1px solid #fff;
+      border-left: 0; border-top: 0;
+      transform: rotate(45deg);
+    }
+    &:hover { background-color: #fd0; color: #333;}
+  }
+}
+
+@keyframes move {
+  0% { transform: translateY(0);}
+  100% {transform: translateY(-1rem);}
 }
