--- a/study_code/b_step_03/css/src/e_10_scrollMove_002.css
+++ b/study_code/b_step_03/css/src/e_10_scrollMove_002.css
@@ -3,6 +3,7 @@
   height: auto;
   min-width: 500px;
   padding: 0 1rem 5rem;
+  padding-top: 300rem;
   background-image: linear-gradient(45deg, #fa0, #acf, #ccc);
 }
 
@@ -62,7 +63,7 @@
   max-width: 1200px;
   height: 800px;
   margin: auto;
-  background-color: transparent;
+  background-color: #fd7;
 }
 
 #footBox {
