--- a/study_code/a_project/scss/src/main_v2.scss
+++ b/study_code/a_project/scss/src/main_v2.scss
@@ -35,10 +35,10 @@ html, body { color: $color_black; font-weight: 400;}
 
 
 } // ~1279px ===============================================================
+*/
 
 // 1280px ~ ----------------------------------------------------------------
 @media all and (min-width: 1280px){
-
+  .side_menu { display: none;}
 
 } // 1280px ~ ====================================================================
-*/
