--- a/study_code/a_project/scss/src/main/_main_event.scss
+++ b/study_code/a_project/scss/src/main/_main_event.scss
@@ -41,6 +41,7 @@
   &:nth-child(2) .event_img { @include img('event_02.png', $size: cover); }
   &:nth-child(3) .event_img { @include img('event_04.png', $size: cover); }
   &:nth-child(4) .event_img { @include img('event_03.jpg', $size: cover); }
+  &:nth-child(5) .event_img { @include img('event_05.jpg', $size: cover); }
 } // .event
 
 @import './main_event_handhelds';
