--- a/study_code/b_step_06/src/index.css
+++ b/study_code/b_step_06/src/index.css
@@ -1,3 +1,4 @@
+/* reset.css, common.css */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +7,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+h1, h2, h3, h4, h5, h6, p, dl, dt, dd {
+  margin: 0; padding: 0;
+}
+ul, ol {
+  list-style: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
