--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -86,11 +86,7 @@ html, body {
   left: 0;
   right: 0;
   z-index: 100;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
   width: 100%;
-  max-width: 1920px;
   margin: auto;
   background-color: rgba(255, 255, 255, 0.8);
 }
@@ -102,6 +98,15 @@ html, body {
 #headBox button:hover {
   outline: 2px solid #1c1c1c;
   border-radius: 4px;
+}
+
+.head_wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  max-width: 1920px;
+  margin: auto;
 }
 
 .side_menu {
