--- a/study_code/b_step_06/src/style/CardList.scss
+++ b/study_code/b_step_06/src/style/CardList.scss
@@ -50,9 +50,15 @@
       width: 100%; height: auto;
       padding:0 1rem;
 
-      button {
+      label {
+        height: 37px; box-sizing: border-box;
         padding: 0.5rem 1rem; border-radius: 0.3rem;
+        cursor: pointer;
         background-color: #ada;
+      }
+      input:focus + label { 
+        outline: 2px solid #333; 
+        // box-shadow: 0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.7);
       }
       a {
         padding:0.5rem 1rem;  border-radius: 0.3rem;
