--- a/study_code/a_project/scss/common/_headBox.scss
+++ b/study_code/a_project/scss/common/_headBox.scss
@@ -5,7 +5,7 @@
 
 #headBox {
   position: fixed; top: 0; left: 0; right: 0; z-index: 100;
-  // display: flex; justify-content: space-between; align-items: flex-end;
+  display: flex; align-items: flex-end;
   width: 100%; margin: auto;
   background-color: rgba($color_white, 0.8);
 
@@ -35,39 +35,96 @@
   position: absolute;
   top: 0; bottom: 0; right: 0;
   width: 78.125vw; height: 100%;
-  padding: 20px;
+  padding: 30px;
   background-color: #fff;
 
   .close_btn {
-    position: absolute; top: 20px; right: 20px;
+    position: absolute; top: 30px; right: 30px;
     width: 40px; height: 40px;
     @include img('close.png');
   }
 }
 
 .side_header {
-  display: flex; flex-direction: column;
-  width: 100%; height: 100px;
+  display: flex; flex-direction: column; justify-content: space-between;
+  width: 100%; height: 70px;
+}
 
-  .side_language {
-    > div { display: none;}
-    > div.on { display: block;}
-    margin-bottom: 20px;
-  }
+.side_language {
+  position: relative;
+  width: 80px; height: 30px;
+  cursor: pointer;
+  &::before {
+    position: absolute; top: 3px; right: -20px;
+    content: ""; display: block;
+    width: 10px; height: 10px;
+    border-left: 2px solid $color_deep_gray;
+    border-bottom: 2px solid $color_deep_gray;
+    transform: rotate(-45deg);
+    // 밑 호버 수정
+    &:hover { outline: 2px solid $color_black; border-radius: 4px;}
 
-  .side_user {
-    display: flex; justify-content: space-between;
-    width: 120px; height: 20px;
   }
+  > div { 
+    display: none;
+    width: 100%; height: 30px;
+    position: relative; z-index: 10;
+    background-color: $color_primary_light;
+    text-align: center;
+    
+  }
+  > div.on { display: block; background-color: transparent;}
+  margin-bottom: 20px;
+}
+.side_user {
+  display: flex; justify-content: space-between;
+  width: 120px; height: 20px;
 }
 
 .side_menu_part {
   display: flex; flex-direction: column;
   margin-top: 30px;
+  >li {
+    margin-bottom: 10px;
+    font-size: 20px; font-weight: 700;
+    text-transform: capitalize;
+  }
   .shop_sub_menu {
     display: flex; flex-direction: column;
+    padding-top: 10px;
     padding-left: 20px;
+    >li {
+      margin-bottom: 10px;
+      font-size: 18px; font-weight: 400;
+    }
   }
+}
+
+.side_footer_area {
+  position: absolute; bottom: 0; left: 0; right: 0;
+  width: 100%; height: 70px;
+  margin: auto;
+  background-color: $color_gray;
+
+}
+.side_footer{
+  display: flex; justify-content: space-between;
+  width: 200px; height: 100%; 
+  margin: auto;
+
+  li {
+    position: relative;
+    width: 100px; height: 100%;
+    font-size: 18px;
+    text-align: center; line-height: 70px;
+    &:first-child::after {
+      position: absolute; top: 20px; right: 0;
+      content: ""; display: block;
+      width: 0.5px; height: 30px;
+      background-color: $color_deep_gray;
+    }
+  }
+  
 }
 
 
