--- a/study_code/a_project/scss/src/main/_main_awards.scss
+++ b/study_code/a_project/scss/src/main/_main_awards.scss
@@ -19,31 +19,37 @@
   } // .awards_title
 } // #awardsBox
 
-  .awards_area {
-    width: 100%;
-    margin: auto; margin-top: 50px;
+.awards_area {
+  width: 100%;
+  margin: auto; margin-top: 50px;
 
-    .awards_part {
-      position: relative;
-      width: 100%; max-width: 1920px; height: 100%;
-      margin: auto;
-    }
-  } // .awards_area
-  
-  .awards_main {
-    display: flex; justify-content: space-between;
-    // margin: auto;
+  .awards_part {
+    position: relative;
+    width: 100%; max-width: 1920px; height: 100%;
+    margin: auto;
+  }
+} // .awards_area
 
-    .awards {
-      background-color: $color_gray;
-      &:nth-child(1) { @include img('awards_01.jpg', $size: cover)}
-      &:nth-child(2) { @include img('awards_02.jpg', $size: cover)}
-      &:nth-child(3) { @include img('awards_03.jpg', $size: cover)}
-      &:nth-child(4) { @include img('awards_04.jpg', $size: cover)}
-      &:nth-child(5) { @include img('awards_05.jpg', $size: cover)}
+.awards_main {
+  display: flex; justify-content: space-between;
+  // margin: auto;
 
-    }
-  } // .awards_main
+  .awards {
+    background-color: $color_gray;
+    &:nth-child(1) { @include img('awards_01.jpg', $size: cover)}
+    &:nth-child(2) { @include img('awards_02.jpg', $size: cover)}
+    &:nth-child(3) { @include img('awards_03.jpg', $size: cover)}
+    &:nth-child(4) { @include img('awards_04.jpg', $size: cover)}
+    &:nth-child(5) { @include img('awards_05.jpg', $size: cover)}
+    
+  }
+} // .awards_main
+
+.black::after {
+  content: ""; display: block;
+  width: 100%; height: 100%;
+  background-color: rgba($color_black, 0.5);
+}
 
 @import './main_awards_handhelds';
 @import './main_awards_pc';
