--- a/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
@@ -26,14 +26,14 @@
       width: 30vw; height: 30vw;
       // margin: 0 10px;
       
-      &:nth-child(1) {
-        // margin: auto;
-        @include img_black('awards_01.jpg');
-      }
-      &:nth-child(4) {
-        // margin: auto;
-        @include img_black('awards_04.jpg');
-      }
+      // &:nth-child(1) {
+      //   // margin: auto;
+      //   @include img_black('awards_01.jpg');
+      // }
+      // &:nth-child(4) {
+      //   // margin: auto;
+      //   @include img_black('awards_04.jpg');
+      // }
       &:nth-child(n+5){ display: none;}
     }
   } // .awards_main
