--- a/study_code/a_project/scss/src/main/_main_awards_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_pc.scss
@@ -41,28 +41,28 @@
     }
   } // .awards_btn
 
-  .awards_indicator {
-    display: flex; justify-content: space-between;
-    position: absolute;
-    bottom: 20px; left: 0; right: 0;
-    width: 220px; height: 20px;
-    margin: auto;
+  // .awards_indicator {
+  //   display: flex; justify-content: space-between;
+  //   position: absolute;
+  //   bottom: 20px; left: 0; right: 0;
+  //   width: 220px; height: 20px;
+  //   margin: auto;
 
-    .awards_circle {
-      width: 20px; height: 20px;
-      // margin-right: 30px;
-      border-radius: 100%;
-      background-color: $color_primary_circle;
+  //   .awards_circle {
+  //     width: 20px; height: 20px;
+  //     // margin-right: 30px;
+  //     border-radius: 100%;
+  //     background-color: $color_primary_circle;
 
-      &.on { background-color: $color_primary; }
-      button {
-        @include full;
-        border-radius: 100%;
-        &:hover { background-color: rgba($color: $color_black, $alpha: 0.3);}
-        &:focus { border: 3px solid $color_black;}
-      }
-    }
-  } // .awards_indicator
+  //     &.on { background-color: $color_primary; }
+  //     button {
+  //       @include full;
+  //       border-radius: 100%;
+  //       &:hover { background-color: rgba($color: $color_black, $alpha: 0.3);}
+  //       &:focus { border: 3px solid $color_black;}
+  //     }
+  //   }
+  // } // .awards_indicator
 
   .awards_main {
     width: 90.625vw; max-width: 1740px; height: 220px;
@@ -77,20 +77,20 @@
         margin: auto;
       }
       
-      &:nth-child(1) {
-        width: 160px; height: 160px;
-        margin: auto;
-        @include img_black('awards_01.jpg');
-      }
-      &:nth-child(5) {
-        width: 160px; height: 160px;
-        margin: auto;
-        @include img_black('awards_05.jpg');
-      }
+      // &:nth-child(1) {
+      //   width: 160px; height: 160px;
+      //   margin: auto;
+      //   @include img_black('awards_01.jpg');
+      // }
+      // &:nth-child(5) {
+      //   width: 160px; height: 160px;
+      //   margin: auto;
+      //   @include img_black('awards_05.jpg');
+      // }
       
       &:nth-child(n+6){display: none;}
     }
 
   } // .awards_main
-
+  
 } // 1280px ~ ====================================================================
