--- a/study_code/a_project/scss/src/main/_main_viewBox.scss
+++ b/study_code/a_project/scss/src/main/_main_viewBox.scss
@@ -11,7 +11,8 @@
 } // .view_area
   
 .view_btn {
-  position: absolute; top: 50%; z-index: 20;
+  position: absolute; z-index: 500;
+  top: 50%;
   width: 100%; height: 50px;
   
   & > div {
@@ -45,7 +46,7 @@
   // width: 750px; height: 550px;
   width: 100%; height: 100%;
   .view_in_wrap {
-    position: relative;
+    position: relative; z-index:100;
     display: flex; justify-content: space-between;
     width: 100%;
     height: 100%;
@@ -56,12 +57,14 @@
   display: none;
   position: absolute; top: 0; left: 0;
   // float: left;
+  opacity: 1;    
   width: 100%;
   height: 100%;
   
   &.on {
     display: block;
-    
+    z-index: 50;
+    opacity: 1;    
   }
   
   a { @include full; }
@@ -89,7 +92,7 @@
 }
   
 .view_num {
-position: absolute;
+position: absolute; z-index: 500;
 left: 20px; bottom: 10px;
 width: 70px; height: 25px;
 background-color: rgba($color_black, 0.3);
