--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -181,12 +181,12 @@
     @at-root .foot_facebook a {
       display: block;
       width: 30px; height: 30px;
-      @include img('facebook_black.png');
+      @include img('facebook_white.png');
     }
     @at-root .foot_instagram a{
       display: block;
       width: 30px; height: 30px;
-      @include img('instagram_black.png');
+      @include img('instagram_white.png');
     }
   } // .foot_bottom_btn
 } // 768px ~ 1279px =====================================================================
