--- a/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_handhelds.scss
@@ -11,11 +11,35 @@
   .awards_area {
     height: auto;
 
-    .awards_btn {display: none;}
-    .awards_btn > div { margin-bottom: -35px;}
+    // .awards_btn {display: none;}
+    // .awards_btn > div { margin-bottom: -35px;}
 
-    .awards_indicator { display: none; }
+    
+    // .awards_indicator { display: none; }
   }// .awards_area
+  .awards_btn {
+    position: absolute;
+    top: calc(50% + 25px); z-index: 1;
+    width: 100%; max-width: 1920px; height: 50px; margin: auto;
+
+    button {
+      position: absolute;
+      bottom: 50%;
+      width: 70px; height: 70px;
+      &:hover { background-color: rgba($color_black, 0.4); border-radius: 4px; }
+      &:focus { border: 3px solid $color_black; border-radius: 4px; }
+    }
+    .awards_after_btn {
+      right: 20px;
+      @include img('forward.png');
+      
+    } // .awards_after_btn
+
+    .awards_before_btn {
+      left: 20px;
+      @include img('back.png');
+    }
+  } // .awards_btn
 
   .awards_main {
     width: 130vw; height: auto;
@@ -26,14 +50,16 @@
       width: 30vw; height: 30vw;
       // margin: 0 10px;
       
-      // &:nth-child(1) {
-      //   // margin: auto;
-      //   @include img_black('awards_01.jpg');
-      // }
-      // &:nth-child(4) {
-      //   // margin: auto;
-      //   @include img_black('awards_04.jpg');
-      // }
+      &:nth-child(1)::after {
+        content: ""; display: block;
+        width: 100%; height: 100%;
+        background-color: rgba($color_black, 0.5);
+      }
+      &:nth-child(4)::after {
+        content: ""; display: block;
+        width: 100%; height: 100%;
+        background-color: rgba($color_black, 0.5);
+      }
       &:nth-child(n+5){ display: none;}
     }
   } // .awards_main
