--- a/study_code/a_project/scss/src/main/_main_awards_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_awards_pc.scss
@@ -14,7 +14,8 @@
     position: absolute;
     top: calc(50% - 25px); z-index: 1;
     width: 100%; max-width: 1920px; height: 50px; margin: auto;
-    > div {
+
+    button {
       position: absolute;
       bottom: 50%;
       width: 70px; height: 70px;
@@ -23,21 +24,13 @@
     }
     .awards_after_btn {
       right: 20px;
-
-      button {
-        @include full;
-        @include img('forward_orange.png');
-      }
+      @include img('forward_orange.png');
       
     } // .awards_after_btn
 
     .awards_before_btn {
       left: 20px;
-
-      button {
-        @include full;
-        @include img('back_orange.png');
-      }
+      @include img('back_orange.png');
     }
   } // .awards_btn
 
@@ -72,21 +65,27 @@
       width: 220px; height: 220px;
       margin: 0 20px;
 
-      &.black{
+      // &.black{
+      //   width: 160px; height: 160px;
+      //   margin: auto;
+      // }
+      
+      &:nth-child(1), &:nth-child(5){
         width: 160px; height: 160px;
         margin: auto;
       }
       
-      // &:nth-child(1) {
-      //   width: 160px; height: 160px;
-      //   margin: auto;
-      //   @include img_black('awards_01.jpg');
-      // }
-      // &:nth-child(5) {
-      //   width: 160px; height: 160px;
-      //   margin: auto;
-      //   @include img_black('awards_05.jpg');
-      // }
+      
+      &:nth-child(1)::after {
+        content: ""; display: block;
+        width: 100%; height: 100%;
+        background-color: rgba($color_black, 0.5);
+      }
+      &:nth-child(5)::after {
+        content: ""; display: block;
+        width: 100%; height: 100%;
+        background-color: rgba($color_black, 0.5);
+      }
       
       &:nth-child(n+6){display: none;}
     }
