--- a/study_code/a_project/css/src/event_v2.css
+++ b/study_code/a_project/css/src/event_v2.css
@@ -51,6 +51,8 @@
   display: block;
   font-size: 18px;
   font-weight: 400;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .text_price {
@@ -63,7 +65,8 @@
 
 .text_detail {
   width: 100%;
-  height: 33px;
+  height: auto;
+  min-height: 33px;
   display: block;
   font-size: 16px;
   font-weight: 400;
@@ -188,6 +191,7 @@ html, body {
   border-radius: 4px;
 }
 .side_language > div {
+  display: none;
   width: 100%;
   height: 30px;
   position: relative;
