--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -51,6 +51,8 @@
   display: block;
   font-size: 18px;
   font-weight: 400;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .text_price {
@@ -63,7 +65,8 @@
 
 .text_detail {
   width: 100%;
-  height: 33px;
+  height: auto;
+  min-height: 33px;
   display: block;
   font-size: 16px;
   font-weight: 400;
@@ -188,6 +191,7 @@ html, body {
   border-radius: 4px;
 }
 .side_language > div {
+  display: none;
   width: 100%;
   height: 30px;
   position: relative;
@@ -1461,7 +1465,6 @@ html, body {
 
 .best_area {
   display: flex;
-  height: 430px;
   margin: auto;
   margin-top: 20px;
   padding: 5px 0;
@@ -1484,7 +1487,6 @@ html, body {
   background-color: rgba(255, 241, 224, 0.4);
 }
 .best_area .best_item a .best_text {
-  width: 320px;
   height: 100px;
   padding: 0 10px;
   /* background-color: var(--color-sample1); */
@@ -1616,28 +1618,33 @@ html, body {
   }
 
   #bestBox {
-    overflow: hidden;
+    overflow: auto;
     min-height: 480px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  #bestBox::-webkit-scrollbar {
+    display: none;
   }
 
   .best_area {
     justify-content: space-between;
     flex-wrap: nowrap;
     width: auto;
-    height: 240px;
+    height: 400px;
   }
 
   .best_item {
-    width: 140px;
-    height: 240px;
+    width: 200px;
+    height: 340px;
     margin-top: 10px;
   }
   .best_item a .best_img {
-    width: 140px;
-    height: 140px;
+    width: 200px;
+    height: 200px;
   }
   .best_item a .best_text {
-    width: 140px;
+    width: 200px;
   }
 }
 @media all and (min-width: 1280px) {
@@ -1646,12 +1653,12 @@ html, body {
     flex-wrap: wrap;
     overflow: hidden;
     width: 100%;
-    height: 430px;
+    height: 450px;
   }
 
   .best_item {
     width: 320px;
-    height: 420px;
+    height: 440px;
   }
   .best_item:first-child {
     margin-left: 0;
@@ -1662,7 +1669,6 @@ html, body {
   }
   .best_item a .best_text {
     width: 320px;
-    height: 100px;
     padding: 0 10px;
     /* background-color: var(--color-sample1); */
   }
@@ -2051,7 +2057,7 @@ html, body {
   overflow: hidden;
 }
 .event:nth-child(2) .event_img {
-  background-image: url(../../img/event_02.png);
+  background-image: url(../../img/event_02.jpg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
@@ -2066,7 +2072,7 @@ html, body {
   overflow: hidden;
 }
 .event:nth-child(3) .event_img {
-  background-image: url(../../img/event_04.png);
+  background-image: url(../../img/event_04.jpg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
@@ -2598,7 +2604,6 @@ html, body {
 }
 .sale_item .sale_price_area {
   display: flex;
-  justify-content: flex-start;
   width: 100%;
   height: auto;
 }
@@ -2610,7 +2615,7 @@ html, body {
   color: #EC0F0C;
 }
 .sale_item .sale_price_area .sale_price {
-  width: 90px;
+  width: auto;
   height: auto;
   font-size: 18px;
 }
