--- a/study_code/a_project/scss/common/_headBox.scss
+++ b/study_code/a_project/scss/common/_headBox.scss
@@ -64,7 +64,7 @@
 
   }
   > div { 
-    // display: none;
+    display: none;
     width: 100%; height: 30px;
     position: relative; z-index: 10;
     background-color: $color_primary_light;
