--- a/study_code/a_project/scss/src/main/_main_bestBox_pc.scss
+++ b/study_code/a_project/scss/src/main/_main_bestBox_pc.scss
@@ -7,11 +7,11 @@
     justify-content: space-around; flex-wrap: wrap;
     overflow: hidden;
     // width: 78.125vw; 
-    width: 100%; height: 430px;
+    width: 100%; height: 450px;
   } // .best_area
   
   .best_item {
-    width: 320px; height: 420px;
+    width: 320px; height: 440px;
 
     &:first-child { margin-left: 0;}
     a { 
@@ -19,7 +19,7 @@
         width: 320px; height: 320px;
       }
       .best_text {
-        width: 320px; height: 100px;
+        width: 320px;
         padding: 0 10px;
         /* background-color: var(--color-sample1); */
       }
