--- a/study_code/a_project/scss/src/main/_main_common.scss
+++ b/study_code/a_project/scss/src/main/_main_common.scss
@@ -37,6 +37,8 @@
   width: 100%; height: 33px;
   display: block;
   font-size: 18px; font-weight: 400;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .text_price {
   width: 100%; height: 33px;
@@ -44,7 +46,7 @@
   font-size: 16px; font-weight: 700;
 }
 .text_detail {
-  width: 100%; height: 33px;
+  width: 100%; height: auto; min-height: 33px;
   display: block;
   font-size: 16px; font-weight: 400;
   text-overflow: ellipsis;
